feat: add endpoint for getting qrcode
