# internal/usecase/authentication/authentication_request.go
@@ -1,0 +1,5 @@
+package authentication
+
+type LoginParam struct {
+	ID string `validate:"required"`
+}
