# internal/usecase/authentication/authentication_response.go
@@ -1,0 +1,6 @@
+package authentication
+
+type LoginResponse struct {
+	QrCode  string
+	Timeout int
+}
